apps/cluster/openbao/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openbao
  namespace: openbao
  annotations:
    gethomepage.dev/href: "https://bao.cloud.obara.xyz"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "OpenBao"
    gethomepage.dev/description: "Self-hosted, open-source alternative Vault"
    gethomepage.dev/group: "Services"
    gethomepage.dev/icon: "sh-openbao.svg"
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: websecure
  hostnames:
    - bao.cloud.obara.xyz
  rules:
    - backendRefs:
        - name: oauth2-proxy-openbao
          namespace: oauth2-proxy
          port: 80
